--- a/css/projects.module.css
+++ b/css/projects.module.css
@@ -2,7 +2,7 @@
 @value blueColor, yellowColor, beigeColor, greenColor from tokens;
 
 .part {
-  composes: view from '../css/layout.module.css';
+  composes: view from "../css/layout.module.css";
 }
 
 .part_header {
@@ -10,12 +10,12 @@
 }
 
 .title {
-  composes: largeTitleOutline from '../css/typo.module.css';
+  composes: largeTitleOutline from "../css/typo.module.css";
   margin-bottom: 1rem;
 }
 
 .title_outline {
-  composes: largeTitle from '../css/typo.module.css';
+  composes: largeTitle from "../css/typo.module.css";
 }
 
 .part_filter {
@@ -36,14 +36,14 @@
 .input_search {
   background-color: transparent;
   border: none;
-  composes: empty from '../css/typo.module.css';
+  composes: empty from "../css/typo.module.css";
   width: 100%;
   overflow: hidden;
   padding: 0.95rem 0.5rem;
 }
 
 .filter_radio {
-  composes: smallCaps from '../css/typo.module.css';
+  composes: smallCaps from "../css/typo.module.css";
   color: #e5d6c0;
   margin-right: 1rem;
   border-bottom: 1rem solid beigeColor;
@@ -60,14 +60,14 @@
 .filter_select {
   border: 0.2rem solid blueColor;
   background-color: transparent;
-  composes: smallCaps from '../css/typo.module.css';
+  composes: smallCaps from "../css/typo.module.css";
   padding: 0.75rem 2rem 0.75rem 0.5rem;
   margin-right: 1rem;
   cursor: pointer;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  background: transparent url('../public/assets/images/select_arrow.svg')
+  background: transparent url("../public/assets/images/select_arrow.svg")
     no-repeat 98% center;
 }
 
@@ -85,7 +85,7 @@
 
 .delete_filter__small {
   display: none;
-  composes: smallText from '../css/typo.module.css';
+  composes: smallText from "../css/typo.module.css";
   text-decoration: underline;
 }
 /* Filter Fase's */
@@ -99,17 +99,17 @@
   cursor: pointer;
 }
 
-.input_radio[type='radio']:hover ~ .input_text:after {
+.input_radio[type="radio"]:hover ~ .input_text:after {
   top: 0;
   left: 0;
 }
 
-.input_radio[type='radio']:checked + .filter_radio {
+.input_radio[type="radio"]:checked + .filter_radio {
   color: blueColor;
   border-bottom: 0.2rem solid blueColor;
 }
 
-.input_radio[type='radio']:checked ~ .input_text:after {
+.input_radio[type="radio"]:checked ~ .input_text:after {
   left: 0;
   top: 0;
 }
@@ -163,7 +163,7 @@
 }
 
 .empty_state__text {
-  composes: mediumTitle from './typo.module.css';
+  composes: mediumTitle from "./typo.module.css";
   color: #e5d6c0;
   text-align: center;
   font-size: 4rem;
@@ -171,7 +171,7 @@
 }
 
 .empty_state__text__outline {
-  composes: mediumTitleOutline from './typo.module.css';
+  composes: mediumTitleOutline from "./typo.module.css";
   -webkit-text-stroke: 0.1rem #e5d6c0;
   text-stroke: 0.1rem #e5d6c0;
   display: inline-block;
@@ -187,11 +187,10 @@
   text-align: center;
   flex-wrap: wrap;
   justify-content: center;
-} 
-
+}
 
 .empty_state__button {
-  composes: smallCaps from './typo.module.css';
+  composes: smallCaps from "./typo.module.css";
   border: 0.2rem solid blueColor;
   padding: 0.8rem 1rem;
   position: relative;
@@ -201,7 +200,7 @@
 }
 
 .empty_state__button:after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   background: inherit;
@@ -215,13 +214,13 @@
   transition: all 0.2s ease-in-out;
 }
 
-.empty_state__button:hover .empty_state__button:after {
+.empty_button:hover .empty_state__button:after {
   top: 0;
   left: 0;
 }
 
 .empty_state__button__extra {
-  composes: smallCapsLight from './typo.module.css';
+  composes: smallCapsLight from "./typo.module.css";
   border-bottom: 0.1rem solid #091422;
   display: inline-block;
   padding: 0.5rem 0;
@@ -244,8 +243,8 @@
   .part_filter {
     display: grid;
     grid-template-areas:
-      'search selectone selecttwo selectthree delete'
-      'fase fase fase fase fase';
+      "search selectone selecttwo selectthree delete"
+      "fase fase fase fase fase";
     grid-template-columns: 1fr 1fr 1fr 1fr auto;
     width: 100%;
     grid-gap: 1rem;
@@ -326,10 +325,10 @@
   .part_filter {
     display: grid;
     grid-template-areas:
-      'search selectone'
-      'selecttwo selectthree'
-      'delete delete'
-      'fase fase ';
+      "search selectone"
+      "selecttwo selectthree"
+      "delete delete"
+      "fase fase ";
     grid-template-columns: 1fr 1fr;
     width: 100%;
     grid-column-gap: 1rem;
