Linking Profiles + Changes icons

--- a/components/Form/Step1/step1.module.css
+++ b/components/Form/Step1/step1.module.css
@@ -207,8 +207,13 @@
   }
 
   .form {
-    margin-top: 3rem;
+    margin-top: 5rem;
     grid-column: span 2;
+  }
+
+  .empty {
+    grid-column: span 2;
+    margin-top: 5rem;
   }
 }
 
