--- a/components/Detail/Needs/needs.module.css
+++ b/components/Detail/Needs/needs.module.css
@@ -13,16 +13,16 @@
 }
 
 .needs_title {
-  composes: mediumTitle from '../../../css/typo.module.css';
+  composes: mediumTitle from "../../../css/typo.module.css";
   margin-bottom: 3rem;
 }
 
 .needs_provided {
-  composes: smallCaps from '../../../css/typo.module.css';
+  composes: smallCaps from "../../../css/typo.module.css";
 }
 
 .needs_provided__light {
-  composes: smallCapsLight from '../../../css/typo.module.css';
+  composes: smallCapsLight from "../../../css/typo.module.css";
   padding-right: 0.5rem;
 }
 
@@ -55,7 +55,7 @@
 
 .need {
   position: relative;
-  width: 30rem;
+  width: 20rem;
   scroll-snap-align: start;
 }
 
@@ -75,7 +75,7 @@
 }
 
 .need_item__text {
-  composes: smallCaps from '../../../css/typo.module.css';
+  composes: smallCaps from "../../../css/typo.module.css";
   margin-bottom: 1rem;
   font-size: 1.2rem;
 }
@@ -97,7 +97,7 @@
 }
 
 .needs_item__image:after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   background: inherit;
@@ -119,11 +119,11 @@
 }
 
 .button {
-  composes: smallButton from '../../../css/buttons.module.css';
+  composes: smallButton from "../../../css/buttons.module.css";
 }
 
 .circle_button {
-  composes: smallCircleButton from '../../../css/buttons.module.css';
+  composes: smallCircleButton from "../../../css/buttons.module.css";
   transition: none;
 }
 
@@ -136,7 +136,7 @@
 }
 
 .button_image {
-  composes: smallButtonImage from '../../../css/buttons.module.css';
+  composes: smallButtonImage from "../../../css/buttons.module.css";
   object-fit: cover;
   width: 100%;
   height: 100%;
@@ -158,7 +158,7 @@
   height: 100%;
   background-color: transparent;
   border: none;
-  composes: empty from '../../../css/typo.module.css';
+  composes: empty from "../../../css/typo.module.css";
 }
 
 .motivation {
@@ -171,7 +171,7 @@
 }
 
 .motivation:after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   background: inherit;
@@ -198,11 +198,11 @@
 }
 
 .motivation_button {
-  composes: button from '../../../css/buttons.module.css';
+  composes: button from "../../../css/buttons.module.css";
 }
 
 .motivation_circle__button {
-  composes: circleButton from '../../../css/buttons.module.css';
+  composes: circleButton from "../../../css/buttons.module.css";
   transition: none;
 }
 
@@ -211,7 +211,7 @@
 }
 
 .motivation_button__image {
-  composes: buttonImage from '../../../css/buttons.module.css';
+  composes: buttonImage from "../../../css/buttons.module.css";
   object-fit: cover;
   width: 100%;
   height: 100%;
@@ -226,7 +226,7 @@
 }
 
 .button_arrow {
-  composes: buttonBack from '../../../css/buttons.module.css';
+  composes: buttonBack from "../../../css/buttons.module.css";
   cursor: pointer;
 }
 
@@ -235,7 +235,7 @@
 }
 
 .back_text {
-  composes: bold from '../../../css/typo.module.css';
+  composes: bold from "../../../css/typo.module.css";
 }
 
 @media screen and (max-width: 850px) {
