--- a/components/Profile/SelectedProject/selectedproject.module.css
+++ b/components/Profile/SelectedProject/selectedproject.module.css
@@ -49,6 +49,7 @@
   align-items: center;
   border: none;
   background-color: transparent;
+  cursor: pointer;
 }
 
 .header_button:first-of-type {
