--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ html {
 
 #__next {
   min-height: 100vh;
+  background-color: #fdecd2;
 }
 
 /* #__next:after {
@@ -24,23 +25,22 @@ html {
 
 body {
   min-height: 100vh;
-  background-color: #fdecd2;
   font-family: Montserrat, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
+/* body {
   background-color: #fdecd2;
   transition-delay: 0.5s;
   transition: background-color 1s ease-in-out;
-}
+} */
 
-body.dark-mode {
+/* body.dark-mode {
   background-color: #091422;
   transition-delay: 0.5s;
   transition: background-color 1s ease-in-out;
-}
+} */
 
 a {
   text-decoration: none;
@@ -207,6 +207,10 @@ a {
   max-width: 3rem;
 }
 
+.profile-image {
+  position: relative;
+}
+
 .profile-button {
   background-color: transparent;
   border: none;
@@ -327,6 +331,26 @@ a {
 
 .circle-button--realisatie {
   background-color: rgb(79, 200, 177) !important;
+}
+
+.notification-number {
+  background-color: #091422;
+  border: 0.2rem solid #fdecd2;
+  height: 2rem;
+  width: 2rem;
+  border-radius: 50%;
+  font-family: Montserrat, sans-serif;
+  color: #fdecd2;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  font-weight: 800;
+  position: absolute;
+  top: -0.7rem;
+  right: -0.7rem;
 }
 
 @media screen and (max-width: 850px) {
