--- a/css/tokens.module.css
+++ b/css/tokens.module.css
@@ -4,3 +4,8 @@
 @value greenColor: rgb(79, 200, 177);
 @value yellowColor: rgb(245, 224, 39);
 @value lightColor: rgb(117, 117, 117);
+
+/* [data-theme="dark-mode"] {
+  @value beigeColor: rgb(253, 236, 210);
+  @value blueColor: rgb(9, 20, 34);
+} */
